Reporting Code Added

--- a/Configs/configuration.properties
+++ b/Configs/configuration.properties
@@ -3,3 +3,4 @@ implicitWait = 10
 url = https://rahulshettyacademy.com/seleniumPractise/#/
 environment = local
 browser = chrome
+reportConfigPath = C:\\Users\\91986\\IdeaProjects\\FinalProj\\Configs\\extent-config.xml
